--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d1f56546-ba4a-4c5d-a6b4-b8c1579d98d1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -52,6 +55,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
