--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@types/geojson": "^7946.0.8",
     "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
