--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "ahuzot-map",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "format:fix": "pretty-quick --staged",
-    "lint": "ng lint",
-    "prepare": "husky install"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.0.3",
-    "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.0.3",
-    "@angular/compiler": "~12.0.3",
-    "@angular/core": "~12.0.3",
-    "@angular/forms": "~12.0.3",
-    "@angular/material": "^12.2.13",
-    "@angular/platform-browser": "~12.0.3",
-    "@angular/platform-browser-dynamic": "~12.0.3",
-    "@angular/router": "~12.0.3",
-    "@types/geojson": "^7946.0.8",
-    "leaflet": "^1.7.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.3",
-    "@angular-eslint/builder": "12.7.0",
-    "@angular-eslint/eslint-plugin": "12.7.0",
-    "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "12.7.0",
-    "@angular-eslint/template-parser": "12.7.0",
-    "@angular/cli": "~12.0.3",
-    "@angular/compiler-cli": "~12.0.3",
-    "@types/leaflet": "^1.7.9",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.28.2",
-    "@typescript-eslint/parser": "4.28.2",
-    "eslint": "^7.26.0",
-    "husky": "^7.0.0",
-    "prettier": "^2.6.2",
-    "pretty-quick": "^3.1.3",
-    "typescript": "~4.2.3"
-  }
+	"name": "ahuzot-map",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"format:fix": "pretty-quick --staged",
+		"lint": "ng lint",
+		"prepare": "husky install"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~12.0.3",
+		"@angular/cdk": "^12.2.13",
+		"@angular/common": "~12.0.3",
+		"@angular/compiler": "~12.0.3",
+		"@angular/core": "~12.0.3",
+		"@angular/forms": "~12.0.3",
+		"@angular/material": "^12.2.13",
+		"@angular/platform-browser": "~12.0.3",
+		"@angular/platform-browser-dynamic": "~12.0.3",
+		"@angular/router": "~12.0.3",
+		"@types/geojson": "^7946.0.8",
+		"leaflet": "^1.7.1",
+		"rxjs": "~6.6.0",
+		"tslib": "^2.1.0",
+		"zone.js": "~0.11.4"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "~12.0.3",
+		"@angular-eslint/builder": "12.7.0",
+		"@angular-eslint/eslint-plugin": "12.7.0",
+		"@angular-eslint/eslint-plugin-template": "12.7.0",
+		"@angular-eslint/schematics": "12.7.0",
+		"@angular-eslint/template-parser": "12.7.0",
+		"@angular/cli": "~12.0.3",
+		"@angular/compiler-cli": "~12.0.3",
+		"@types/leaflet": "^1.7.9",
+		"@types/node": "^12.11.1",
+		"@typescript-eslint/eslint-plugin": "4.28.2",
+		"@typescript-eslint/parser": "4.28.2",
+		"eslint": "^7.26.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.0",
+		"prettier": "^2.6.2",
+		"pretty-quick": "^3.1.3",
+		"typescript": "~4.2.3"
+	}
 }
