--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,7 @@
 	"htmlWhitespaceSensitivity": "ignore",
 	"jsxBracketSameLine": true,
 	"printWidth": 128,
+	"endOfLine": "auto",
 	"overrides": [
 		{
 			"files": "*.html",
